Pre-release 3.6.1 upgrade to python 3.13
